--- a/src/stylesheets/Lungo.base.less
+++ b/src/stylesheets/Lungo.base.less
@@ -91,14 +91,15 @@ html {
     height: 100%;
     font-size: 100%;
     -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;}
+    -ms-text-size-adjust: 100%;
+}
 
 body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    min-height: 100%;
+    max-height: 100%;
 
     overflow: hidden;
 
