--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -10,15 +10,11 @@
 @import "constants.less";
 @import "mixins.less";
 
-body {
-    overflow: hidden;
-}
-
 section {
     //position: absolute; /* position: fixed on iOS5 & Android 4 */
     position: fixed;
-    left:  0px;
-    top:  0px;
+    left:  0;
+    top:  0;
     width: 100%;
     height: 100%;
     z-index: 0;
@@ -65,9 +61,9 @@ section {
 }
 
 header, footer  {
-    position: absolute;
-    //position: fixed;
-    left: 0px;
+    //position: absolute;
+    position: fixed;
+    left: 0;
     width: 100%;
     height: @header-height;
     display: block;
@@ -78,7 +74,7 @@ header, footer  {
 }
 
 header {
-    top: 0px;
+    top: 0;
 
     & .title {
         margin-left: 4px;
@@ -109,6 +105,6 @@ header {
     }
 }
 
-footer  {
-    bottom: 0px;
+footer {
+    bottom: 0;
 }
