--- a/src/stylesheets/css/Lungo.base.css
+++ b/src/stylesheets/css/Lungo.base.css
@@ -4,7 +4,7 @@ audio,canvas,video{display:inline-block;*display:inline;*zoom:1;}
 audio:not([controls]){display:none;}
 [hidden]{display:none;}
 html{height:100%;font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}
-body{margin:0;padding:0;width:100%;height:100%;min-height:100%;overflow:hidden;font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:1.231;-webkit-touch-callout:none;display:-webkit-box;-webkit-box-orient:vertical;-webkit-box-align:stretch;}
+body{margin:0;padding:0;width:100%;height:100%;max-height:100%;overflow:hidden;font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:1.231;-webkit-touch-callout:none;display:-webkit-box;-webkit-box-orient:vertical;-webkit-box-align:stretch;}
 a{text-decoration:none;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);}
 a:hover{opacity:1;}
 b,strong{font-weight:bold;}
