--- a/src/stylesheets/css/Lungo.layout.article.css
+++ b/src/stylesheets/css/Lungo.layout.article.css
@@ -1,12 +1,1 @@
-article{position:fixed;width:100% !important;height:auto;top:0;bottom:0;display:none;visibility:hidden;z-index:0;}article.current,article:first-child{visibility:visible;display:block;z-index:1;}
-article .title{font-size:1.1em;margin:0px 0 4px;}article .title .icon{margin-right:4px;}
-article .text{margin:4px 0 8px;display:block;font-size:0.9em;font-weight:normal;line-height:1.4em;}
-article .box.quarter{height:25%;}
-article .box.third{height:33.3%;}
-article .box.middle{height:50%;}
-article .box.two-thirds{height:66.7%;}
-header:not(.extended)~article{top:42px;}
-header.extended~article{top:75px;}
-footer:not(.with-labels)~article{bottom:41px;}
-footer.with-labels~article{bottom:52px;}
-@media handheld,only screen and (min-width:768px){article.aside{-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);-o-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);-o-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0);}}
+article{position:fixed;width:100%!important;height:auto;top:0;bottom:0;display:none;visibility:hidden;z-index:0}article.current,article:first-child{visibility:visible;display:block;z-index:1}article .title{font-size:1.1em;margin:0 0 4px}article .title .icon{margin-right:4px}article .text{margin:4px 0 8px;display:block;font-size:.9em;font-weight:normal;line-height:1.4em}article .box.quarter{height:25%}article .box.third{height:33.3%}article .box.middle{height:50%}article .box.two-thirds{height:66.7%}header:not(.extended) ~ article{top:42px}header.extended ~ article{top:75px}footer:not(.with-labels) ~ article{bottom:41px}footer.with-labels ~ article{bottom:52px}@media handheld,only screen and (min-width:768px){article.aside{-webkit-transform:translate3d(0px,0,0);-moz-transform:translate3d(0px,0,0);-ms-transform:translate3d(0px,0,0);-o-transform:translate3d(0px,0,0);transform:translate3d(0px,0,0);-webkit-transform:translate3d(0px,0,0);-moz-transform:translate3d(0px,0,0);-ms-transform:translate3d(0px,0,0);-o-transform:translate3d(0px,0,0);transform:translate3d(0px,0,0)}}
