Minimal changes on stylesheets

--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -89,9 +89,10 @@
 
     & .onright .icon, & small .icon {
         font-size: 1.4em !important;
-        line-height: 16px;
-        height: 14px !important;
-        width: 14px !important;
-        margin-right: 0px !important;
+        line-height: 0.9em;
+        height: 13px !important;
+        width: 13px !important;
+        margin-right: 1px !important;
+        text-align: center;
     }
 }
