New stylesheet for .list elements

--- a/src/stylesheets/Lungo.widgets.less
+++ b/src/stylesheets/Lungo.widgets.less
@@ -48,9 +48,10 @@
 .round { .border-radius(4px); }
 
 .bubble {
-    padding: 1px 3px 1px 3px;
-    height: 14px;
-    font-size: 10px;
+    display: inline-block;
+    padding: 2px 3px;
+    min-width: 12px;
+    font-size: 0.75em;
     font-weight: bold;
-    line-height: 14px;
+    line-height: 13px;
 }
