--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -13,26 +13,51 @@
 .list {
     font-size: 1.15em;
 
-    & a {
-        display: block;
-    }
-
-    & li:not(.toolbar) {
-        padding: 8px 6px 8px 8px;
+    & li {
         list-style-type: none;
 
-        & .icon, & img {
+        &.padding {
+            padding: 8px 6px;
+        }
+
+        & a {
+            position: relative;
+            display: block;
+            padding: 8px;
+        }
+
+        &.arrow > a::after{
+            content: '';
+            display: block;
+            width: 6px;
+            height: 6px;
+            border-right: 3px solid #D0D0D8;
+            border-top: 3px solid #D0D0D8;
+            position: absolute;
+            right: 12px;
+            top: 43%;
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            -o-transform: rotate(45deg);
+            transform: rotate(45deg);
+        }
+
+         & .icon, & img {
             float: left;
             width: 32px;
             height: 32px;
-            margin-right: 6px;
-            font-size: 36px;
-            font-weight: normal;
-        }
-    }
+            margin-right: 8px;
 
-    & .icon, & img {
-        display: inline-block;
+            font-size: 46px;
+            line-height: 32px;
+            text-align: center;
+        }
+
+        &.thumb img {
+           margin: -8px 8px -8px -8px;
+           height: 47px;
+           width:47px;
+        }
     }
 
     & small {
@@ -40,9 +65,29 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        font-size: 0.85em;
+        font-size: 0.75em;
     }
 
+    & .bubble {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    & .onright {
+        font-size: 0.75em;
+        font-weight: bold;
+    }
+
+    & .onright .icon, & small .icon {
+        height: 13px;
+        width: auto;
+        //width: 13px;
+        margin-right: 1px;
+        font-size: 1.4em !important;
+        line-height: 0.8em;
+    }
+
+    //@todo: Refactor li.anchor stylesheet;
     & li.anchor {
         font-size: 0.85em;
         padding: 4px 4px 3px;
@@ -61,38 +106,5 @@
     & .tip {
         font-size: 0.85em;
         font-weight: bold;
-    }
-
-    & .search {
-        & input { width: 88%; }
-
-        & a {
-            float: right;
-            height: 30px;
-            margin: 0px;
-            padding: 0px;
-
-            & icon {
-                height: 12px;
-                width: 30px;
-                margin: 0px;
-                font-size: 1.2em;
-                font-weight: normal;
-            }
-        }
-    }
-
-    & .onright {
-        font-size: 0.75em;
-        line-height: 16px;
-    }
-
-    & .onright .icon, & small .icon {
-        font-size: 1.4em !important;
-        line-height: 0.9em;
-        height: 13px !important;
-        width: 13px !important;
-        margin-right: 1px !important;
-        text-align: center;
     }
 }
