--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -116,15 +116,15 @@ header nav {
 /* @end */
 
 /* @group <aside> */
-a {
-}
+
 aside {
-    color:  #FFF;
+    color:  #fff;
     background: #323d4c;
 		
     & header, footer {
 		.box-shadow(~"inset 0 1px 0 #434b55, inset 0 -1px 0 #384352");
-    	.linear-gradient(top, ~',#2c3440 0%', ~',#1b232c 100%');
+    	.linear-gradient(top, ~',#2c3440 0%', ~',#242d38 100%');
+    	
 	}
 	
 	& .list li {
@@ -377,21 +377,19 @@ input[type="range"] {
 /* @end */
 .bubble {
     color: #fff;
-    .border-radius(7px);
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
-    //border: solid 1px rgba(255,255,255,0.8);
+    .border-radius(8px);
+    text-shadow: 0 0 1px rgba(0,0,0,1);
 
-    &.count { .linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%); }
+    &.count { 
+    	.linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%); 
+    	.box-shadow(0 0 2px rgba(0,0,0,0.5);
+    }
 }
     header .bubble.count {
         .linear-gradient(top, ~','@color-secondary 0%, ~','@color-secondary-dark 100%);
     }
 
     .list .bubble{
-		.box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.4), inset 0 1px 0 rgba(0,0,0,0.4), inset -1px 0 0 rgba(0,0,0,0.4), inset 0 -1px 0 rgba(0,0,0,0.4)');
-    	border: solid 1px rgba(255,255,255,0.1);
-        padding: 2px 5px;
-
-    	.border-radius(~'30px !important');
+		.box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)');
 	}
 /* @end */
