--- a/src/stylesheets/css/Lungo.layout.list.css
+++ b/src/stylesheets/css/Lungo.layout.list.css
@@ -1,1 +1,12 @@
-.list{font-size:1.15em}.list a{display:block}.list li:not(.toolbar){padding:8px 6px 8px 8px;list-style-type:none}.list li:not(.toolbar) .icon,.list li:not(.toolbar) img{float:left;width:32px;height:32px;margin-right:6px;font-size:36px;font-weight:normal}.list .icon,.list img{display:inline-block}.list small{display:block;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-size:.85em}.list li.anchor{font-size:.85em;padding:4px 4px 3px}.list li.anchor .icon{width:14px!important;height:14px!important;margin-right:2px!important;font-size:1.6em!important;line-height:14px!important}.list li.anchor .bubble{display:none}.list .tip{font-size:.85em;font-weight:bold}.list .search input{width:88%}.list .search a{float:right;height:30px;margin:0;padding:0}.list .search a icon{height:12px;width:30px;margin:0;font-size:1.2em;font-weight:normal}.list .onright{font-size:.75em;line-height:16px}.list .onright .icon,.list small .icon{font-size:1.4em!important;line-height:.9em;height:13px!important;width:13px!important;margin-right:1px!important;text-align:center}
+.list{font-size:1.15em;}.list li{list-style-type:none;}.list li.padding{padding:8px 6px;}
+.list li a{position:relative;display:block;padding:8px;}
+.list li.arrow>a::after{content:'';display:block;width:6px;height:6px;border-right:3px solid #D0D0D8;border-top:3px solid #D0D0D8;position:absolute;right:12px;top:43%;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);transform:rotate(45deg);}
+.list li .icon,.list li img{float:left;width:32px;height:32px;margin-right:8px;font-size:46px;line-height:32px;text-align:center;}
+.list li.thumb img{margin:-8px 8px -8px -8px;height:47px;width:47px;}
+.list small{display:block;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-size:0.75em;}
+.list .bubble{padding-left:5px;padding-right:5px;}
+.list .onright{font-size:0.75em;font-weight:bold;}
+.list .onright .icon,.list small .icon{height:13px;width:auto;margin-right:1px;font-size:1.4em !important;line-height:0.8em;}
+.list li.anchor{font-size:0.85em;padding:4px 4px 3px;}.list li.anchor .icon{width:14px !important;height:14px !important;margin-right:2px !important;font-size:1.6em !important;line-height:14px !important;}
+.list li.anchor .bubble{display:none;}
+.list .tip{font-size:0.85em;font-weight:bold;}
