--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -171,7 +171,7 @@ header nav.plain a:active {
 /* @end */
 /* @group <aside> */
 aside {
-  color: #FFF;
+  color: #fff;
   background: #323d4c;
 }
 aside header,
@@ -182,16 +182,16 @@ aside footer {
   -webkit-box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
   -moz-box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
   box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
-  background-image: -webkit-linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: -moz-linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: -ms-linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: -o-linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: -webkit-linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: -moz-linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: -ms-linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: -o-linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
-  background-image: linear-gradient(top ,#2c3440 0% ,#1b232c 100%);
+  background-image: -webkit-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: -moz-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: -ms-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: -o-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: -webkit-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: -moz-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: -ms-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: -o-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  background-image: linear-gradient(top ,#2c3440 0% ,#242d38 100%);
 }
 aside .list li {
   color: #F0F0F0;
@@ -677,19 +677,19 @@ input[type="range"]:active::-webkit-slider-thumb {
 /* @end */
 .bubble {
   color: #fff;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  border-radius: 7px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  border-radius: 7px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
+  text-shadow: 0 0 1px #000000;
 }
 .bubble.count {
   background-image: -webkit-linear-gradient(top , #2c8bca 0% , #154f93 100%);
@@ -702,6 +702,12 @@ input[type="range"]:active::-webkit-slider-thumb {
   background-image: -ms-linear-gradient(top , #2c8bca 0% , #154f93 100%);
   background-image: -o-linear-gradient(top , #2c8bca 0% , #154f93 100%);
   background-image: linear-gradient(top , #2c8bca 0% , #154f93 100%);
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 header .bubble.count {
   background-image: -webkit-linear-gradient(top , #353b42 0% , #272a2d 100%);
@@ -716,25 +722,11 @@ header .bubble.count {
   background-image: linear-gradient(top , #353b42 0% , #272a2d 100%);
 }
 .list .bubble {
-  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.4), inset 0 1px 0 rgba(0,0,0,0.4), inset -1px 0 0 rgba(0,0,0,0.4), inset 0 -1px 0 rgba(0,0,0,0.4);
-  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,0.4), inset 0 1px 0 rgba(0,0,0,0.4), inset -1px 0 0 rgba(0,0,0,0.4), inset 0 -1px 0 rgba(0,0,0,0.4);
-  box-shadow: inset 1px 0 0 rgba(0,0,0,0.4), inset 0 1px 0 rgba(0,0,0,0.4), inset -1px 0 0 rgba(0,0,0,0.4), inset 0 -1px 0 rgba(0,0,0,0.4);
-  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.4), inset 0 1px 0 rgba(0,0,0,0.4), inset -1px 0 0 rgba(0,0,0,0.4), inset 0 -1px 0 rgba(0,0,0,0.4);
-  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,0.4), inset 0 1px 0 rgba(0,0,0,0.4), inset -1px 0 0 rgba(0,0,0,0.4), inset 0 -1px 0 rgba(0,0,0,0.4);
-  box-shadow: inset 1px 0 0 rgba(0,0,0,0.4), inset 0 1px 0 rgba(0,0,0,0.4), inset -1px 0 0 rgba(0,0,0,0.4), inset 0 -1px 0 rgba(0,0,0,0.4);
-  border: solid 1px rgba(255, 255, 255, 0.1);
-  padding: 2px 5px;
-  -webkit-border-radius: 30px !important;
-  -moz-border-radius: 30px !important;
-  border-radius: 30px !important;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
-  -webkit-border-radius: 30px !important;
-  -moz-border-radius: 30px !important;
-  border-radius: 30px !important;
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
+  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
+  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
+  box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
+  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
+  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
+  box-shadow: inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3);
 }
 /* @end */
