--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -17,7 +17,7 @@
         list-style-type: none;
 
         &.padding {
-            padding: 8px 6px;
+            padding: 8px;
         }
 
         & a {
@@ -42,7 +42,7 @@
             transform: rotate(45deg);
         }
 
-         & .icon, & img {
+        & .icon, & img {
             float: left;
             width: 32px;
             height: 32px;
@@ -59,6 +59,7 @@
            width:47px;
         }
     }
+
 
     & small {
         display: block;
