--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -18,7 +18,7 @@
         @theme-highlight-color: #1b6777;
         @theme-highlight-text-shadow: 0 1px 0 rgba(255,255,255,0.2);
 
-@border-radius-section: 5px;
+@border-radius-section: 4px;
 
 @color-border: #2566a4;
     @color-border-light: #64b9e2;
@@ -125,18 +125,30 @@ aside {
 		.box-shadow(~"inset 0 1px 0 #434b55, inset 0 -1px 0 #384352");
     	.linear-gradient(top, ~',#2c3440 0%', ~',#242d38 100%');
     	
+    	& nav a {
+			.box-shadow(~"1px 0 0 rgba(255,255,255,0.1), inset -1px 0 0 rgba(0,0,0,0.1)");
+		}	
 	}
 	
 	& .list li {
         color: #F0F0F0;
 		background: none;
         border-bottom: 1px solid #434b55;
-        
-        & a {
-	
-	background: red;
-}
+   		& strong {
+			text-shadow: 0 1px 1px black;
+		}
+		
+		& small {
+			color:  rgba(255,255,255,0.3);
+		}
 	}
+	
+	& a {
+		color: #fff !important;
+		opacity: 0.5;
+		&.current { opacity: 1; }
+	}
+		
 }
 
 section.aside {
@@ -388,8 +400,16 @@ input[type="range"] {
     header .bubble.count {
         .linear-gradient(top, ~','@color-secondary 0%, ~','@color-secondary-dark 100%);
     }
-
-    .list .bubble{
+	
+    article .list .bubble{
 		.box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)');
 	}
+	
+	
+	aside .list .bubble {
+		background: rgba(0,0,0,0.25);
+				.box-shadow(~'inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56');
+		.box-shadow(~'inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2)');
+	}
+		
 /* @end */
