--- a/src/stylesheets/constants.less
+++ b/src/stylesheets/constants.less
@@ -2,12 +2,14 @@
 
 /* DIMENSIONS */
 @header-height: 42px;
-    @header_extended_height: 74px;
+    @header_extended_height: 75px;
+
 @header_footer_height: 40px;
 @footer_toolbar_height: 48px;
     @with-labels-height: 51px;
 @article-bottom: 41px;
     @article-bottom-with-labels: 52px;
+    @article_with_header_extended: 78px;
 
 @border-radius: 3px;
 
