--- a/src/stylesheets/css/Lungo.layout.list.css
+++ b/src/stylesheets/css/Lungo.layout.list.css
@@ -1,9 +1,8 @@
-.list{font-size:1.15em;}.list li{list-style-type:none;}.list li.padding{padding:8px;}
+.list li{list-style-type:none;}.list li.padding{padding:8px;}
 .list li a{position:relative;display:block;padding:8px;}
 .list li.arrow>a::after{content:'';display:block;width:6px;height:6px;border-right:3px solid #D0D0D8;border-top:3px solid #D0D0D8;position:absolute;right:12px;top:43%;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);transform:rotate(45deg);}
 .list li .icon,.list li img{float:left;width:32px;height:32px;margin-right:8px;font-size:46px;line-height:32px;text-align:center;}
 .list li.thumb img{margin:-8px 8px -8px -8px;height:47px;width:47px;}
-.list small{display:block;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;font-size:0.75em;}
 .list .bubble{padding-left:5px;padding-right:5px;}
 .list .onright{font-size:0.75em;font-weight:bold;}
 .list .onright .icon,.list small .icon{height:13px;width:auto;margin-right:1px;font-size:1.4em !important;line-height:0.8em;}
