Enhaced form elements

--- a/src/stylesheets/Lungo.layout.aside.less
+++ b/src/stylesheets/Lungo.layout.aside.less
@@ -33,9 +33,15 @@ aside {
     &.onright { right: 0px; }
     &.current { visibility: visible;}
 
+
     & header, & footer {
         position: relative;
         left: none;
+    }
+
+    & footer {
+        position: absolute;
+        bottom: 0;
     }
 
     &.small {
