--- a/src/stylesheets/Lungo.widgets.less
+++ b/src/stylesheets/Lungo.widgets.less
@@ -32,7 +32,9 @@
 .onleft { float: left; }
 .onright { float: right;}
 .hidden { display: none; }
-.indented > * { padding: 10px; }
+.indented > * {
+    margin: 10px;
+}
 .wrapper {
     padding: 8px 8px;
 }
