--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -81,11 +81,7 @@ section > footer {
   background-clip: padding-box;
 }
 article {
-  background-color: #EBEBEB;
-}
-article .title {
-  color: #797979;
-  text-shadow: 0px 1px 0px #fff;
+  background: #efefef;
 }
 /* @end */
 /* @group <nav> */
@@ -172,53 +168,38 @@ header nav.plain a:active {
 /* @group <aside> */
 aside {
   color: #fff;
-  background: #323d4c;
+  background: #272727;
+  background: #333;
 }
 aside header,
 aside footer {
-  -webkit-box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
-  -moz-box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
-  box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
-  -webkit-box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
-  -moz-box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
-  box-shadow: inset 0 1px 0 #434b55, inset 0 -1px 0 #384352;
-  background-image: -webkit-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: -moz-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: -ms-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: -o-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: -webkit-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: -moz-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: -ms-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: -o-linear-gradient(top ,#2c3440 0% ,#242d38 100%);
-  background-image: linear-gradient(top ,#2c3440 0% ,#242d38 100%);
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1);
+  -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1);
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1);
+  -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1);
+  background: #272727;
 }
-aside header nav a,
-aside footer nav a {
-  -webkit-box-shadow: 1px 0 0 rgba(255,255,255,0.1), inset -1px 0 0 rgba(0,0,0,0.1);
-  -moz-box-shadow: 1px 0 0 rgba(255,255,255,0.1), inset -1px 0 0 rgba(0,0,0,0.1);
-  box-shadow: 1px 0 0 rgba(255,255,255,0.1), inset -1px 0 0 rgba(0,0,0,0.1);
-  -webkit-box-shadow: 1px 0 0 rgba(255,255,255,0.1), inset -1px 0 0 rgba(0,0,0,0.1);
-  -moz-box-shadow: 1px 0 0 rgba(255,255,255,0.1), inset -1px 0 0 rgba(0,0,0,0.1);
-  box-shadow: 1px 0 0 rgba(255,255,255,0.1), inset -1px 0 0 rgba(0,0,0,0.1);
+aside article {
+  background: none;
+}
+aside .list ul {
+  background: none;
 }
 aside .list li {
   color: #F0F0F0;
-  background: none;
-  border-bottom: 1px solid #434b55;
+  border-bottom: 1px solid #2f2f2f;
 }
 aside .list li strong {
   text-shadow: 0 1px 1px black;
+  color: #fff;
 }
 aside .list li small {
   color: rgba(255, 255, 255, 0.3);
 }
-aside a {
-  color: #fff !important;
-  opacity: 0.5;
-}
 aside a.current {
-  opacity: 1;
+  background: #2f2f2f;
 }
 section.aside {
   -webkit-box-shadow: -4px 0 8px rgba(0,0,0,0.5);
@@ -262,8 +243,10 @@ section.aside.onright {
 .list li:not(.toolbar) a {
   color: #2a2a2a;
 }
-.list li {
+.list ul {
   background: #fff;
+}
+.list li {
   border-bottom: 1px inset #f8f8f8;
 }
 .list li:last-child {
@@ -462,14 +445,6 @@ section.aside.onright {
 }
 /* @end */
 /* @group <form> */
-form,
-.form {
-  font-weight: bold;
-}
-form li,
-.form li {
-  min-height: 27px;
-}
 form label,
 .form label {
   color: #999;
@@ -477,42 +452,42 @@ form label,
 input,
 textarea,
 select {
-  border: 1px solid #b2b2b2;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  border: 1px solid #ccc;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
   color: #858585;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
+  -webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
+  box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
+  box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
 }
 input:focus,
 textarea:focus,
 select:focus {
-  color: #64b9e2;
+  color: #000;
   border-color: #64b9e2;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef;
+  -webkit-box-shadow: 0 0 6px #64b9e2;
+  -moz-box-shadow: 0 0 6px #64b9e2;
+  box-shadow: 0 0 6px #64b9e2;
+  -webkit-box-shadow: 0 0 6px #64b9e2;
+  -moz-box-shadow: 0 0 6px #64b9e2;
+  box-shadow: 0 0 6px #64b9e2;
 }
 .select:after {
-  background: #858585;
+  background: #ccc;
   color: white;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
