New repository of icons: x64

--- a/src/stylesheets/Lungo.layout.list.less
+++ b/src/stylesheets/Lungo.layout.list.less
@@ -45,9 +45,8 @@
             width: 32px;
             height: 32px;
             margin-right: 8px;
-
-            font-size: 46px;
-            line-height: 32px;
+            font-size: 2.6em;
+            line-height: 1.0em;
             text-align: center;
         }
 
@@ -71,9 +70,8 @@
     & .onright .icon, & small .icon {
         height: 13px;
         width: auto;
-        //width: 13px;
         margin-right: 1px;
-        font-size: 1.4em !important;
+        font-size: 1.2em;
         line-height: 0.8em;
     }
 
