New .icon : "close"

--- a/src/stylesheets/Lungo.widgets.icon.less
+++ b/src/stylesheets/Lungo.widgets.icon.less
@@ -56,7 +56,7 @@
 .icon.info:before {content: "\0053";}
 .icon.cancel:before {content: "\0054";}
 .icon.checkmark:before {content: "\0051";}
-.icon.multiply:before {content: "\0055";}
+.icon.multiply:before, .icon.close:before {content: "\0055";}
 .icon.plus:before {content: "\0056";}
 .icon.minus:before {content: "\0057";}
 .icon.left:before {content: "\0058";}
