--- a/src/stylesheets/Lungo.widgets.form.less
+++ b/src/stylesheets/Lungo.widgets.form.less
@@ -206,9 +206,9 @@ input[type="range"] {
         position: relative;
         z-index: 1;
 
+        top:-1px;
         width: 24px;
         height: 24px;
-        border-radius: 12px;
     }
 }
 /* @end */
